# orbiter

./: Dockerfile  README.md  invoke.yaml  package-lock.json  package.json  pyproject.toml  tasks.py
base/: Dockerfile
builder/: README  README.md  adduser  alpine_core  apk  dockerfile  micromamba  micromamba_builder  micromamba_core  micromamba_deploy  npm  pip  pip_builder  pip_core  pip_deploy  pyenv_python
core/: Dockerfile
dockerfiles/alpine/base/: Dockerfile
dockerfiles/alpine/geospatial/: Dockerfile
dockerfiles/micromamba/base/: Dockerfile
dockerfiles/micromamba/geospatial/: Dockerfile
microm/base/: Dockerfile  alpine.pkg
microm/builder/: Dockerfile
stage/: Dockerfile  base.yml
templates/: Dockerfile.j2  Dockerfile_base.j2  Dockerfile_base_microm.j2  Dockerfile_builder_microm.j2  Dockerfile_core.j2  Dockerfile_stage.j2  README.j2
