[tool.poetry]
name = "microbe"
version = "0.1.0"
description = ""
authors = ["Andreas Trawöger <atrawog@dorgeln.org>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
numpy = "^1.20.3"
pandas = "^1.2.4"
jupyterlab = "^3.0.15"
altair = "^4.1.0"
altair-saver = "^0.5.0"
nbgitpuller = "^0.9.0"
jupyter-server-proxy = "^3.0.2"
jupyterlab-spellchecker = "^0.5.2"
matplotlib = "^3.4.2"
jupyterlab-git = "^0.30.1"
vega-datasets = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
