[tool.poetry]
name = "microbe"
version = "0.1.0"
description = ""
authors = ["Andreas Trawöger <atrawog@dorgeln.org>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
numpy = "^1.20.3"
pandas = "^1.2.4"
jupyterlab = "^3.0.15"
altair = "^4.1.0"
altair-saver = "^0.5.0"
nbgitpuller = "^0.9.0"
jupyter-server-proxy = "^3.0.2"
jupyterlab-spellchecker = "^0.5.2"
matplotlib = "^3.4.2"
jupyterlab-git = "^0.30.1"
Cython = "^0.29.23"
intake = "^0.6.2"
intake-stac = "^0.3.0"
sat-search = "^0.3.0"
Fiona = "^1.8.19"
Shapely = "^1.7.1"
pyproj = "^3.0.1"
Rtree = "^0.9.7"
geopandas = "^0.9.0"
rasterio = "^1.2.3"
geopy = "^2.1.0"
xarray = "^0.18.0"
dvc = "^2.1.0"
jupyter-book = "^0.10.2"
h5py = "^3.2.1"
netCDF4 = "^1.5.6"
cysgp4 = "^0.3.3"
asciinema = "^2.0.2"
lolcat = "^1.4"
ttygif = "^1.2.149"
Pillow = "^8.2.0"
nbdev = "^1.1.14"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
